--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Changes made: Fix validator on token to use \A \z instead of $ and ^ in regex; deprecated use of :conditions for Rails 4 in APN::Device model
+----
+
 =APN on Rails (Apple Push Notifications on Rails)
 
 APN on Rails is a Ruby on Rails gem that allows you to easily add Apple Push Notification (iPhone)
